<resources>

    <string name="app_name">SSB1</string>
    <string name="text_welcome">Welcome to Social Sms Blocker!</string>
    <string name="text_switch_interceptor">Switch interceptor</string>
    <string name="text_clear_database">Clear database</string>
    <string name="text_update_database">Update database</string>
    <string name="text_request_database">Request database</string>
	<string name="text_show_database">Show database</string>
	<string name="text_confirm_registration">confirm registration</string>
	<string name="text_request_registration">request regcode</string>
	<string name="text_init_database">init database</string>
	<string name="text_enter_phone">enter number</string>
	<string name="text_report">report</string>
	
</resources>
