<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/btnInitDatabase"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:onClick="onClick"
    	android:textSize="30sp"
    	android:text="@string/text_init_database"
    	/>
    <EditText
        android:id="@+id/etPhone"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/text_enter_phone"
	    />
    <Button
        android:id="@+id/btnRequestRegistration"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:onClick="onClick"
    	android:textSize="30sp"
    	android:text="@string/text_request_registration"
    	/>
    <TextView
        android:id="@+id/tvServerRegResult"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
    <EditText
        android:id="@+id/etRegCode"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/text_welcome"
	    />
    <Button
        android:id="@+id/btnConfirmRegistration"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:onClick="onClick"
    	android:textSize="30sp"
    	android:text="@string/text_confirm_registration"
    	/>

</LinearLayout>